<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/background_image"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_type_label"
        android:layout_centerInParent="true"
        android:textSize="14sp"
        android:visibility="visible"
        android:id="@+id/sign_type_label" />

    <LinearLayout
        android:id="@+id/sign_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_alignParentTop="true"
        android:visibility="visible"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_group"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_no_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_parking" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_below="@+id/sign_type"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_limit_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:id="@+id/time_limit_label" />

        <EditText
            android:id="@+id/time_limit_value"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:hint="in minutes"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_range_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_below="@+id/time_limit"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_range_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:id="@+id/time_limit_label" />

        <CheckBox
            android:id="@+id/no_time_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/no_time_range"
            android:onClick="toggleTimeRange"
            android:checked="false" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/time_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_below="@+id/time_range_header"
            android:visibility="visible"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_range_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:onClick="setStartTime"
            android:layout_marginRight="10dp"
            android:id="@+id/from_label" />

        <TextView
            android:id="@+id/start_time_text"
            android:inputType="datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:onClick="setStartTime"
            android:layout_marginRight="10dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:onClick="setEndTime"
            android:layout_marginRight="10dp"
            android:id="@+id/time_to_label" />

        <TextView
            android:id="@+id/end_time_text"
            android:inputType="datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:onClick="setEndTime"
            android:textSize="14sp" />

        </LinearLayout>



    <LinearLayout
        android:id="@+id/week_days_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_below="@+id/time_range"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday_label"
            android:layout_centerInParent="true"
            android:layout_below="@+id/time_range"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:id="@+id/weekday_label" />

        <CheckBox
            android:id="@+id/no_week_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/no_week_days"
            android:onClick="toggleWeekDays"
            android:checked="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/week_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_below="@+id/week_days_header"
        android:visibility="gone"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/monday"
            android:checked="false" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/tuesday"
            android:checked="false" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/wednesday"
            android:checked="false" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/thursday"
            android:checked="false" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/friday"
            android:checked="false" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/saturday"
            android:checked="false" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:text="@string/sunday"
            android:checked="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_range_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_below="@+id/week_days"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_range_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:id="@+id/date_range_label" />

        <CheckBox
            android:id="@+id/no_date_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_date_range"
            android:onClick="toggleDateRange"
            android:checked="false" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/date_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_below="@+id/date_range_header"
            android:visibility="visible"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:onClick="setStartDate"
            android:layout_marginRight="10dp"
            android:id="@+id/date_range_label" />

        <TextView
            android:id="@+id/start_date_text"
            android:inputType="datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:onClick="setStartDate"
            android:layout_marginRight="10dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:onClick="setEndDate"
            android:layout_marginRight="10dp"
            android:id="@+id/date_to_label" />

        <TextView
            android:id="@+id/end_date_text"
            android:inputType="datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:onClick="setEndDate"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_below="@+id/date_range"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:id="@+id/address_label" />

        <LinearLayout
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_below="@+id/address_label"
            android:visibility="visible"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/street_number"
            android:inputType="textPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:onClick="cursorToEnd"
            android:layout_marginRight="10dp"
            android:hint="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/street_name"
            android:inputType="textPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:onClick="cursorToEnd"
            android:hint="street name"
            android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_below="@+id/street"
            android:visibility="visible"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_label"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:id="@+id/city_label" />

        <EditText
            android:id="@+id/city_value"
            android:inputType="textPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:onClick="cursorToEnd"
            android:hint="city"
            android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_below="@+id/address_label"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:onClick="submit"
            android:background="@drawable/button1"
            android:text="@string/submit" />

        <Button
            android:id="@+id/view_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:onClick="showImage"
            android:background="@drawable/button1"
            android:text="@string/view_image" />

        <Button
            android:id="@+id/canel_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:onClick="cancel"
            android:background="@drawable/button1"
            android:text="@string/cancel" />

         </LinearLayout>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/buttons"
            android:textSize="30dip"
            android:visibility="visible"
            android:id="@+id/warning_message" />

    </LinearLayout>

    <ImageView
        android:id="@+id/sign_full_image"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:onClick="hideImage"/>

</RelativeLayout>