<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_header"
            android:layout_marginRight="10dp"
            android:id="@+id/registration" />

        <LinearLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_marginRight="10dp"
                android:id="@+id/user_name_label" />

            <EditText
                android:id="@+id/user_name_value"
                android:inputType="textNoSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="username"
                android:background="@color/textBackground"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginRight="10dp"
                android:id="@+id/password_label" />

            <EditText
                android:id="@+id/password_value"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="password"
                android:background="@color/textBackground"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retype_password"
                android:layout_marginRight="10dp"
                android:id="@+id/retype_password_label" />

            <EditText
                android:id="@+id/retype_password_value"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="password"
                android:background="@color/textBackground"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginRight="10dp"
                android:id="@+id/email_label" />

            <EditText
                android:id="@+id/email_value"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="email@address"
                android:background="@color/textBackground"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_address"
                android:layout_marginRight="10dp"
                android:id="@+id/home_address_label" />

            <EditText
                android:id="@+id/home_address_value"
                android:inputType="textPostalAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="mailing address"
                android:background="@color/textBackground"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:gravity="center"
                android:background="@drawable/button1"
                android:text="@string/submit" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:id="@+id/status_message" />

    </LinearLayout>
</RelativeLayout>