<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 Google, Inc.
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/map_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

    </RelativeLayout>


    <LinearLayout
            android:id="@+id/start_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:orientation="horizontal">

            <Button
                android:id="@+id/from_button"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:gravity="center"
                android:onClick="getFrom"
                android:background="@drawable/button1"
                android:text="@string/start_time_label" />

             <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:onClick="getFrom"
                 android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_below="@+id/start_layout"
            android:visibility="invisible"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_button"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:gravity="center"
                android:background="@drawable/button1"
                android:onClick="getUntil"
                android:text="@string/end_time_label" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getUntil"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dest_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dest_button"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:gravity="center"
                android:background="@drawable/button1"
                android:onClick="getDestination"
                android:text="@string/destination_label" />

            <EditText
                android:id="@+id/destination_text"
                android:inputType="textPostalAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />
        </LinearLayout>


        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_unavailable"
            android:layout_centerInParent="true"
            android:textSize="30dip"
            android:visibility="invisible"
            android:id="@+id/error_message" />

        <Button
            android:id="@+id/picture_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:layout_below="@+id/error_message"
            android:layout_centerInParent="true"
            android:background="@drawable/button1"
            android:onClick="getCameraPermission"
            android:visibility="invisible"
            android:text="@string/take_picture" />


    <LinearLayout
        android:id="@+id/web_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dest_layout"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:orientation="horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/actionButton0"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/button1"
                android:gravity="center"
                android:layout_marginRight="2dp"
                android:onClick="actionButton0"
                android:text="@string/schedule" />

            <Button
                android:id="@+id/actionButton1"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/button1"
                android:gravity="center"
                android:layout_marginRight="2dp"
                android:onClick="actionButton1"
                android:text="@string/destination" />

            <Button
                android:id="@+id/actionButton2"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/button1"
                android:gravity="center"
                android:onClick="actionButton2"
                android:text="@string/period" />
        </LinearLayout>

    <FrameLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</RelativeLayout>
